--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Adventure Movies
 		<p><span>Ruth, Jeanette, Thabo, Sebastian</span></p>
 	</div>
 </footer>
-<script src="moive.js"></script>
+<script src="movies.js"></script>
 </body>
 </html>
 
