--- a/singleMovie.html
+++ b/singleMovie.html
@@ -66,5 +66,6 @@ Adventure Movies
 		<img class="popcorn" src="images/popcorn.svg" alt="">
 		<p><span>Ruth, Jeanette, Thabo, Sebastian</span></p>
 	</div>
+	<script scr="movies.js"></script>
 </footer>
 </body>
