--- a/singleMovie.html
+++ b/singleMovie.html
@@ -23,6 +23,7 @@ Adventure Movies
 
     <a href="index.html" class="goBack">&#9472; Back to movie list</a>
 </header>
+<div id="root"> 
 <div class="trailer container">
 	
 	<div class="video">
@@ -32,6 +33,9 @@ Adventure Movies
 	</div>
 
 </div>
+
+</div>
+
 
 </div>
 <div class="movieInfo container">
@@ -68,7 +72,7 @@ Adventure Movies
 		<img class="popcorn" src="images/popcorn.svg" alt="">
 		<p><span>Ruth, Jeanette, Thabo, Sebastian</span></p>
 	</div>
-	<script src="movies.js"></script>
+
 </footer>
 <script src="movies.js"></script>
 </body>
