help from Torill

--- a/singleMovie.html
+++ b/singleMovie.html
@@ -26,10 +26,9 @@ Adventure Movies
 <div id="root"> 
 <div class="trailer container">
 	
-	<div class="video">
+	<div id="movieInfo">
 
-		<h2>Movie Title</h2>
-
+		
 	</div>
 
 </div>
