--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" media="print" href="print.css" />
 	<title>Adventure Movies</title>
+
 	<style>
-	@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;700&family=Poppins:wght@300;400;600&display=swap');
-	</style>
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;700&family=Poppins:wght@300;400;600&display=swap');
+</style>
 </head>
 <html>
 	<body>
