--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 <html>
 	<body>
+		<div id="root">
+			<div id="movieInfo"></div>
+		</div>
 		<div class="topSectionIndex">
 			<header class="container">
 				<h1>
