--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<div id="root">
 			<div id="movieInfo"></div>
 		</div>
+		<div id="description"></div>
+		<div id="releaseYear"></div>
 		<div class="topSectionIndex">
 			<header class="container">
 				<h1>
